[package]
name = "juno"
version = "0.1.0"
edition = "2021"
description = "Juno Proxy Server"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
cfg-if = "1.0.0"
clap = { version = "4.0.18", features = ["derive"] }
futures = { version = "0.3.25", default-features = false, features = ["std"] }
hyper = { version = "0.14.20", features = ["full"] }
libc = "0.2.135"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[target."cfg(target_os = \"linux\")".dependencies]
systemd = { version = "0.10.0", default-features = false, optional = true }

[features]
default = ["systemd"]

[profile.release]
codegen-units = 1
lto = true
strip = true
