[package]
name = "juno"
version = "0.1.1"
edition = "2021"
description = "Juno Proxy Server"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
cfg-if = "1.0.0"
clap = { version = "4.0.32", features = ["derive"] }
futures = { version = "0.3.25", default-features = false, features = ["std"] }
hyper = { version = "0.14.23", features = ["full"] }
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[target."cfg(target_os = \"macos\")".dependencies]
libc = "0.2.139"

[target."cfg(target_os = \"linux\")".dependencies]
systemd = { version = "0.10.0", default-features = false, optional = true }

[features]
default = ["systemd"]

[profile.release]
codegen-units = 1
lto = true
strip = true
